// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputDate component Customized via SoraTheme matches snapshot 1`] = `
<div
  className="container-0-2-6"
>
  <input
    className="inputBox-0-2-9"
    onChange={[Function]}
    placeholder="hey"
    style={Object {}}
    type="date"
  />
</div>
`;

exports[`InputDate component Displays optional error status styled as expected 1`] = `
<div
  className="container-0-2-1"
>
  <input
    className="inputBox-0-2-4"
    onChange={[Function]}
    placeholder="hey"
    style={
      Object {
        "border": "1px solid #F45B69",
        "boxShadow": "0px 4px 10px 3px rgba(244, 91, 105, 0.25)",
      }
    }
    type="date"
  />
  <span
    className="feedbackMessageContainer-0-2-2"
    data-testid="undefinedSpanFeedbackMessage"
    style={
      Object {
        "color": "#F45B69",
      }
    }
  >
    <svg
      fill="none"
      height={16}
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 0C3.58125 0 0 3.58125 0 8C0 12.4187 3.58125 16 8 16C12.4187 16 16 12.4187 16 8C16 3.58125 12.4187 0 8 0ZM7.25 4.75C7.25 4.3375 7.5875 4 8 4C8.4125 4 8.75 4.33594 8.75 4.75V8.75C8.75 9.16406 8.41406 9.5 8 9.5C7.58594 9.5 7.25 9.16563 7.25 8.75V4.75ZM8 12.5C7.4575 12.5 7.0175 12.06 7.0175 11.5175C7.0175 10.975 7.45719 10.535 8 10.535C8.54281 10.535 8.9825 10.975 8.9825 11.5175C8.98125 12.0594 8.54375 12.5 8 12.5Z"
        fill="#F45B69"
      />
    </svg>
    <span
      className="feedbackMessageText-0-2-3"
    >
      Invalid date
    </span>
  </span>
</div>
`;

exports[`InputDate component Displays optional success status styled as expected 1`] = `
<div
  className="container-0-2-1"
>
  <input
    className="inputBox-0-2-4"
    onChange={[Function]}
    placeholder="hey"
    style={
      Object {
        "border": "1px solid #7CEA9C",
        "boxShadow": "0px 4px 10px 3px rgba(124, 234, 156, 0.25)",
      }
    }
    type="date"
  />
  <span
    className="feedbackMessageContainer-0-2-2"
    data-testid="undefinedSpanFeedbackMessage"
    style={
      Object {
        "color": "#7CEA9C",
      }
    }
  >
    <svg
      fill="none"
      height={16}
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 8C0 3.58125 3.58125 0 8 0C12.4187 0 16 3.58125 16 8C16 12.4187 12.4187 16 8 16C3.58125 16 0 12.4187 0 8ZM11.6187 6.61875C11.9594 6.27813 11.9594 5.72187 11.6187 5.38125C11.2781 5.04062 10.7219 5.04062 10.3813 5.38125L7 8.7625L5.61875 7.38125C5.27813 7.04062 4.72187 7.04062 4.38125 7.38125C4.04062 7.72187 4.04062 8.27812 4.38125 8.61875L6.38125 10.6187C6.72187 10.9594 7.27813 10.9594 7.61875 10.6187L11.6187 6.61875Z"
        fill="#7CEA9C"
      />
    </svg>
    <span
      className="feedbackMessageText-0-2-3"
    >
      Success date
    </span>
  </span>
</div>
`;

exports[`InputDate component Input with labels matched expected styles 1`] = `
<div
  className="container-0-2-1"
>
  <label
    className="label-0-2-5"
  >
    My custom label
  </label>
  <input
    className="inputBox-0-2-4"
    onChange={[Function]}
    placeholder="hey"
    style={Object {}}
    type="date"
  />
</div>
`;

exports[`InputDate component Wrapper div be customised via props named "css". 1`] = `
<div
  className="container-0-2-1"
>
  <input
    className="inputBox-0-2-4"
    onChange={[Function]}
    placeholder="hey"
    style={
      Object {
        "background": "red",
        "color": "yellow",
      }
    }
    type="date"
    value="1990-01-19"
  />
</div>
`;
